<resources>
    <string name="app_name">TianFire Network</string>
    <string name="title_activity_menu">Menu</string>

    <string name="google_maps_key"> AIzaSyB3PvvqjM0iVOWQ9Cao0QAhnpHuFDUU3ic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nhap_dia_chi">Nhập địa chỉ</string>
    <string name="nhap_ho_ten">Nhập họ tên</string>
    <string name="nhap_email">Nhập email</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="nam">Nam</string>
    <string name="n">Nữ</string>
    <string name="loading">Loading...</string>
    <string name="l_u">Lưu</string>
    <string name="nhap_password">Nhập password</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="firebase_demo">FireBase Demo</string>
    <string name="dang_ki_tai_khoan">Đăng kí tài khoản</string>
    <string name="nhap_lai_password">Nhập lại password</string>
    <string name="nu">Nữ</string>
    <string name="dang_ki">Đăng kí</string>
    <string name="chinh_sua_thong_tin">Chỉnh sửa thông tin</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="dang_bai_viet">Đăng bài viết</string>
    <string name="hay_nhap_cam_nhan_cua_ban">Hãy nhập cảm nhận của bạn</string>
    <string name="dang">Đăng</string>
    <string name="chon_anh">Chọn ảnh</string>
    <string name="cap_nhat_thanh_cong">Cập nhật thành công</string>
    <string name="vui_long_nhap_ten">Vui lòng nhập tên!</string>
    <string name="ten_co_do_dai_duoi_30_ki_tu">Tên có độ dài dưới 30 ký tự!</string>
    <string name="hay_nhap_email_va_password">Hãy nhập email và password!</string>
    <string name="nhap_thong_tin_cho_cac_truong">Nhập thông tin cho các trường!</string>
    <string name="hay_chon_anh_dai_dien">Hãy chọn ảnh đại diện</string>
    <string name="hay_nhap_email_va_nhan_nut_quen_mat_khau">Hãy nhập email và nhấn vào nút Quên mật khẩu</string>
    <string name="da_xoa">Đã xóa</string>
    <string name="vui_long_nhap_email">Vui lòng nhập Email</string>
    <string name="vui_long_nhap_repassword">Vui lòng nhập lại Mật khẩu</string>
    <string name="vui_long_nhap_password">Vui lòng nhập Mật khẩu</string>
    <string name="mat_khau_phai_dai_hon_6_ki_tu">Mật khẩu phải lớn hơn 6 ký tự!</string>
    <string name="mat_khau_khong_trung_khop">Mật khẩu không trùng khớp!</string>
    <string name="tai_xuong">Tải xuống</string>
    <string name="tai">Tải</string>
    <string name="huy">Hủy</string>
    <string name="tai_anh_xuong_may_cua_ban">Tải ảnh xuống máy của bạn</string>
    <string name="chia_se_lan_cuoi">Chia sẻ lần cuối:</string>
    <string name="dang_chia_se_vi_tri">Đang chia sẻ vị trí</string>
    <string name="dung_chia_se_vi_tri">Dừng chia sẻ vị tri</string>
    <string name="thay_doi_mat_khau_thanh_cong">Thay đổi mật khẩu thành công!</string>
    <string name="cap_quyen_ung_dung">Cấp quyền ứng dụng</string>
    <string name="cap_quyen_message">Ứng dụng sẽ hoạt động không ổn định nếu không được cấp quyền đầy đủ!!!</string>
    <string name="cap_quyen">Cấp quyền</string>
    <string name="ban_thuc_su_muon_xoa_bai_viet_nay">Bạn thực sự muốn xóa bài viết này?</string>
    <string name="xoa">Xóa</string>
    <string name="ban_thuc_su_muon_dang_xuat_khoi_thiet_bi_nay">Bạn thực sự muốn đăng xuất khỏi thiết bị này?</string>
    <string name="xoa_bai_viet">Xóa bài viết!</string>
    <string name="email_da_duoc_gui_ve">Email đã được gửi về</string>
    <string name="thay_doi_mat_khau">Thay đổi mật khẩu</string>
    <string name="nhap_mat_khau_moi">Nhập mật khẩu mới:</string>
    <string name="nhap_mat_khau_moi_hint">Nhập mật khẩu mới</string>
    <string name="nhap_lai_mat_khau_moi">Nhập lại mật khẩu mới:</string>
    <string name="nhap_lai_mat_khau_moi_hint">Nhập lại mật khẩu mới</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="email">Email:</string>
    <string name="ho_ten">Họ tên</string>
    <string name="dia_chi">Địa chỉ:</string>
    <string name="tianfire_network">TianFire Network</string>
    <string name="quen_mat_khau">Quên mật khẩu</string>
    <string name="che_do_xem">Chế độ xem</string>
    <string name="hang_don">Hàng đơn</string>
    <string name="hang_doi">Hàng đôi</string>
    <string name="password">Password:</string>
    <string name="repassword">RePassword:</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="tim_kiem_nguoi_dung">Tìm kiếm người dùng</string>
    <string name="chia_se_vi_tri">Chia sẻ vị trí</string>
    <string name="xac_thuc_tai_khoan_message">Email chứa đường link xác nhận tài khoản đã được gửi đên địa chỉ email của bạn. Nếu bạn đã xác nhận, hãy nhấn Tiếp tục</string>
    <string name="xac_thuc_tai_khoan">Xác thực tài khoản</string>
    <string name="thong_tin">Thông tin</string>
    <string name="hom_nay_ban_cam_thay_the_nao">Hôm nay bạn cảm thấy thế nào?</string>
    <string name="anh">Ảnh</string>
    <string name="chinh_sua_bai_viet">Chỉnh sửa bài viết</string>
    <string name="ban_hay_nhap_binh_luan_truoc_khi_dang">Bạn hãy nhập bình luận trước khi đăng!</string>
    <string name="ban_muon_xoa_binh_luan_nay">Bạn muốn xóa bình luận này?</string>


    <string-array name="province_arrays">
        <item>An Giang</item>
        <item>Bà Rịa–Vũng Tàu</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Bình Định</item>
        <item>Bạc Liêu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Cao Bằng</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Điện Biên</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hồ Chí Minh</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Long An</item>
        <item>Lào Cai</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Thanh Hóa</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thừa Thiên–Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Tây Ninh</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
    </string-array>

</resources>
